--- a/playbook.yaml
+++ b/playbook.yaml
@@ -1,29 +1,34 @@
 ---
+# Déclaration de la tâche Ansible pour l'installation de KIND sur Ubuntu 20.04
 - name: Installation de KIND sur Ubuntu 20.04
   hosts: 192.168.31.152
-  become: yes
+  become: yes  # Exécuter les tâches avec des privilèges élevés
   vars:
-    ansible_ssh_private_key_file: /home/yen/.ssh/id_rsa
-    ansible_become_pass: yann2024
+    ansible_ssh_private_key_file: /home/yen/.ssh/id_rsa  # Chemin vers la clé privée SSH
+    ansible_become_pass: yann2024  # Mot de passe pour obtenir des privilèges élevés
 
   tasks:
+    # Installation de Docker
     - name: Installation de Docker
       apt:
         name: docker.io
         state: present
 
+    # Installation de curl
     - name: Installation de curl
       apt:
         name: curl
         state: present
 
+    # Téléchargement de KIND avec wget
     - name: Téléchargement de KIND avec wget
       shell: wget -O /usr/local/bin/kind https://kind.sigs.k8s.io/dl/v0.11.1/kind-linux-amd64
       args:
-        creates: /usr/local/bin/kind
+        creates: /usr/local/bin/kind  # Vérifie si KIND est déjà téléchargé
 
+    # Attribution des droits d'exécution à KIND
     - name: Attribution des droits d'exécution à KIND
       file:
         path: /usr/local/bin/kind
-        mode: 'a+x'
+        mode: 'a+x'  # Ajouter les droits d'exécution au fichier KIND
 
